--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             </div>
         </section>
         <!-- competition link -->
-        <section class="container-fluid my-5">
+        <!--<section class="container-fluid my-5">
             <div class="container mb-5">
                 <div class="row">
                     <div class="col-12 mb-5">
@@ -505,7 +505,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
         <section id="about-us" class="container-fluid my-5 pb-5">
             <div class="container pt-5 pt-md-5 pt-lg-0">
                 <div class="row g-5 align-items-center">
