--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
                 <div class="row g-5 pt-5">
                     <div class="col-12 col-md-12 col-lg-6">
                         <div class="row shadow p-3 learn-row rounded-3 h-100 hover-lift bg-white">
-                            <div class="col-12 col-md-7 col-lg-7 mb-5 mb-md-5 mb-lg-0">
+                            <div class="col-12 col-md-6 col-lg-6 mb-5 mb-md-5 mb-lg-0">
                                 <div
                                     class="d-flex justify-content-center align-items-start flex-column w-100 h-100 ps-md-3">
                                     <div class="learn-box-content">
@@ -893,18 +893,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-5 col-lg-5">
+                            <div class="col-12 col-md-6 col-lg-6">
                                 <div class="d-flex justify-content-center align-items-center w-100 learn-img">
-                                    <img class="w-100 rounded-3" src="./images/home/become a partner.webp"
-                                        alt="Become a Partner - Abacus Franchise" loading="lazy" width="300"
-                                        height="200">
+                                    <img class="w-100 rounded-3 shadow-sm" src="./images/home/become a partner.webp"
+                                        alt="Become a Partner - Abacus Franchise" loading="lazy" width="400"
+                                        height="300">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-12 col-lg-6">
                         <div class="row shadow p-3 learn-row rounded-3 h-100 hover-lift bg-white">
-                            <div class="col-12 col-md-7 col-lg-7 mb-5 mb-md-5 mb-lg-0">
+                            <div class="col-12 col-md-6 col-lg-6 mb-5 mb-md-5 mb-lg-0">
                                 <div
                                     class="d-flex justify-content-center align-items-start flex-column w-100 h-100 ps-md-3">
                                     <div class="learn-box-content">
@@ -927,11 +927,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-5 col-lg-5">
+                            <div class="col-12 col-md-6 col-lg-6">
                                 <div class="d-flex justify-content-center align-items-center w-100 learn-img">
-                                    <img class="w-100 rounded-3" src="images/learn/2.jpg"
-                                        alt="Become a Teacher - Abacus Instructor Training" loading="lazy" width="300"
-                                        height="200">
+                                    <img class="w-100 rounded-3 shadow-sm" src="images/learn/2.jpg"
+                                        alt="Become a Teacher - Abacus Instructor Training" loading="lazy" width="400"
+                                        height="300">
                                 </div>
                             </div>
                         </div>
