--- a/abacus-franchise.html
+++ b/abacus-franchise.html
@@ -327,17 +327,17 @@
     </header>
     <main style="overflow: hidden;" class="w-100">
         <!-- banner -->
-        <section id="banner" class="container-fluid my-5 py-5">
-            <div class="container py-lg-5">
+        <section id="banner" class="container-fluid pt-3 pb-5">
+            <div class="container-fluid px-lg-5 py-lg-4">
                 <div class="row g-5">
                     <div class="col-12 col-md-12 col-lg-7">
                         <div
-                            class="d-flex justify-content-center align-items-start w-100 flex-column gap-3 h-100 hero-content">
-                            <div class="d-flex justify-content-center align-items-center badge-pill mb-2">
+                            class="d-flex justify-content-start align-items-start w-100 flex-column gap-3 h-100 hero-content">
+                            <div class="d-flex justify-content-start align-items-center badge-pill mb-2">
                                 <i class="fa-solid fa-star text-warning me-2"></i>
                                 <span class="m-0">India's #1 Abacus Franchise Brand</span>
                             </div>
-                            <div class="hero d-flex justify-content-start align-items-center w-100 flex-column gap-3">
+                            <div class="hero d-flex justify-content-start align-items-start w-100 flex-column gap-3">
                                 <h1 class="fw-bold m-0 hero-title">Start Your Own Abacus Franchise in India</h1>
                                 <p class="m-0 hero-text">Join the future of education. Start your own future-ready
                                     learning center with India's most trusted Abacus brand. Enjoy low setup cost,
@@ -378,9 +378,9 @@
 
 
         <!-- why choose us -->
-        <section id="wcu" class="container-fluid my-5 py-5">
+        <section id="wcu" class="container-fluid py-5">
             <div class="container">
-                <div class="row mb-5">
+                <div class="row mb-4">
                     <div class="col-12">
                         <div
                             class="d-flex justify-content-center align-items-center text-center w-100 flex-column gap-3 h-100">
@@ -434,7 +434,7 @@
             </div>
         </section>
 
-        <section id="about-us" class="container-fluid py-5 my-5 bg-white border-top border-bottom">
+        <section id="about-us" class="container-fluid py-5 bg-white border-top border-bottom">
             <div class="container">
                 <div class="row g-5">
                     <div class="col-12 col-md-3 col-lg-3">
@@ -462,8 +462,8 @@
         </section>
 
         <section id="process" class="container-fluid py-5">
-            <div class="container py-5">
-                <div class="row mb-5">
+            <div class="container">
+                <div class="row mb-4">
                     <div class="col-12">
                         <div
                             class="d-flex justify-content-center align-items-center w-100 flex-column text-center h-100 gap-3">
@@ -549,9 +549,9 @@
             </div>
         </section>
 
-        <section id="i-and-r" class="container-fluid my-5 py-5">
+        <section id="i-and-r" class="container-fluid py-5">
             <div class="container">
-                <div class="row mb-5">
+                <div class="row mb-4">
                     <div class="col-12">
                         <div
                             class="d-flex justify-content-center align-items-center text-center w-100 flex-column gap-3 h-100">
